# zap-downloader

./: .env.example  .gitignore  README.md  things-to-do.md
.github/workflows/: publish-node.yml  publish-python.yml  test-dependencies-node.yml  test-dependencies-python.yml  workflow-offline-node.yml  workflow-offline-python.yml  workflow-publish-node.yml  workflow-publish-python.yml  workflow-test-node.yml  workflow-test-python.yml
apps/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/browser-verification/: package.json  pnpm-lock.yaml  tsconfig.json
apps/browser-verification/src/: index.ts  verify-chrome.ts  verify-firefox.ts
apps/zap-downloader/: .gitignore  README.md  pyproject.toml
apps/zap-downloader-node/: .gitignore  README.md  package.json  pnpm-lock.yaml
apps/zap-downloader-node/config/: alpha-config.yaml  beta-config.yaml  config-basic.yaml  config-example.yaml  config.yaml  release-config.yaml
apps/zap-downloader-node/src/: downloader.ts  index.ts  parser.ts  proxy.ts  types.ts  workspace.ts
apps/zap-downloader-node/src/commands/: addons.ts  core.ts  create-config.ts  create-toml-config.ts  create-zap-config.ts  daemon.ts  dependencies.ts  download-zap.ts  index.ts  info.ts  list.ts  offline.ts  package.ts  unpack.ts  workspace.ts
apps/zap-downloader-node/src/commands/daemon/: checkStarted.ts  health.ts  httpHelper.ts  index.ts  logs.ts  ping.ts  start.ts  status.ts  stop.ts  types.ts
apps/zap-downloader-node/src/commands/offline/: pack.ts  unpack.ts
apps/zap-downloader/zap_downloader/: __init__.py  cli.py  downloader.py  parser.py  types.py  workspace.py
apps/zap-downloader/zap_downloader.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
apps/zap-downloader/zap_downloader/commands/: addons.py  core.py  create_config.py  create_toml_config.py  create_zap_config.py  daemon.py  dependencies.py  download_zap.py  info.py  list_versions.py  offline.py  package.py  unpack.py  validate.py  workspace.py
apps/zap-downloader/zap_downloader/utils/: devops.py
config/: alpha-config.yaml  beta-config.yaml  config-basic.yaml  config-example.yaml  config.yaml  default.toml  linux-default.yaml  node.toml  release-config.yaml  test.toml  zap-config.yaml
tests/: test_workflow_node.js  test_workflow_python.py
